adding script yandex

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
   <div id="root" style=" overflow: hidden;"></div>
   <div id="footer" style=" overflow: hidden;"></div>
 
+  <script>
+    window.yaContextCb.push(() => {
+      Ya.Context.AdvManager.render({
+        "blockId": "R-A-10068313-1",
+        "type": "fullscreen",
+        "platform": "touch"
+      })
+    })
+  </script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
