--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
   <!-- Yandex.RTB -->
   <script>window.yaContextCb = window.yaContextCb || []</script>
   <script src="https://yandex.ru/ads/system/context.js" async></script>
+  <!-- Yandex.RTB -->
+  <script>window.yaContextCb = window.yaContextCb || []</script>
+  <script src="https://yandex.ru/ads/system/context.js" async></script>
   <title>Sundown Studio</title>
 </head>
 
 <body>
-  <div id="root" style=" overflow: hidden;"></div>
+  <div id="root" style=" overflow: hidden;">
+    <script>window.yaContextCb = window.yaContextCb || []</script>
+    <script src="https://yandex.ru/ads/system/context.js" async></script>
+  </div>
   <div id="footer" style=" overflow: hidden;"></div>
 
   <script>
