--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
 </head>
 
 <body>
+  <div class="ads">
+    <!-- Yandex.RTB R-A-10068313-3 -->
+    <div id="yandex_rtb_R-A-10068313-3"></div>
+    <script>
+      window.yaContextCb.push(() => {
+        Ya.Context.AdvManager.render({
+          "blockId": "R-A-10068313-3",
+          "renderTo": "yandex_rtb_R-A-10068313-3"
+        })
+      })
+    </script>
+  </div>
   <div id="root" style=" overflow: hidden;">
     <script>window.yaContextCb = window.yaContextCb || []</script>
     <script src="https://yandex.ru/ads/system/context.js" async></script>
