--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 <body>
   <div class="ads">
     <!-- Yandex.RTB R-A-10068313-3 -->
+    <!-- Yandex.RTB R-A-10068313-5 -->
+    <script>
+      window.yaContextCb.push(() => {
+        Ya.Context.AdvManager.render({
+          "blockId": "R-A-10068313-5",
+          "type": "fullscreen",
+          "platform": "desktop"
+        })
+      })
+    </script>
     <div id="yandex_rtb_R-A-10068313-3"></div>
     <script>
       window.yaContextCb.push(() => {
